conditions.Conditions.scala.code
if (estFaceMur()) {
    recule()
}
else{
  	avanche()
}